# xjd-hub

./: .env.example  .gitignore  README.md  __init__.py  __main__.py  auth_utils.py  db.py  models.py  pyproject.toml  requirements.txt  server.py  signing.py  test_hub_e2e.py
payment/: __init__.py  credits.py  license.py  recharge.py  wechat.py
routes/: __init__.py  admin.py  auth.py  recharge.py  reviews.py  skills.py
static/: admin.html
