[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xjd-hub"
version = "0.1.0"
description = "XjdHub — Skill marketplace for XJD-Agent"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "XJD Team" }]
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.100,<1",
    "uvicorn>=0.20,<1",
    "PyNaCl>=1.5.0,<2",
    "aiosqlite>=0.19,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0,<10",
    "pytest-asyncio>=1.0.0,<2",
    "httpx>=0.24,<1",
]

[project.scripts]
xjd-hub = "server:main"
